Update README.md
Updated readme